--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "@radix-ui/react-radio-group": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@shadcn/ui": "^0.0.4",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
-    "autoprefixer": "10.4.17",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.0.1",
@@ -22,6 +22,7 @@
     "lucide-react": "^0.436.0",
     "next": "latest",
     "next-themes": "^0.3.0",
+    "next-transpile-modules": "^10.0.1",
     "prettier": "^3.3.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -30,9 +31,10 @@
     "@types/node": "20.10.6",
     "@types/react": "18.2.46",
     "@types/react-dom": "18.2.18",
-    "postcss": "8.4.33",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.1",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss": "3.4.1",
+    "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.3.3"
   }
